# three_pm

./: .gitignore  .scaffold.json  BREADCRUMB.md  CLAUDE.md  ENGAGEMENT.md  README.md  art.sh  art_wobble.sh  index.html  install_sfx.sh  list_samples.sh  main.py  match_foley.sh  package.sh  pyproject.toml  run.sh  scout.sh  sfx_editor.sh  styles.css
art-test/: art_wobble.html  battlefield.js  build_sfx_preview.py  build_win_death_pool.sh  holes_in_reality.html  impact-particles.html  index.html  onion-skin.html  popup-layout.html  screen-shake.html  sfx-candidates.html  sfx-editor.html  sfx-editor.js  sfx-picks.json  sfx-win-death.html  sound-test.html  summary-preview.html  tentacle-timing.html  tilemap_compare.html  tiles.html  tiles.js  tune-server.py  void-sandbox.html  void-wipes.html  wobble.html
assets/: sprites.json  tiles.json
docs/: 00-index.md  01-core-engine.md  02-world-structure.md  03-entity-stats.md  04-combat.md  05-characters.md  06-enemies.md  07-powerups.md  08-meta-progression.md  09-presentation.md  10-hero-varsity.md  11-hero-occultist.md  12-hero-trackstar.md  13-hero-robotics.md  14-story-tone.md  15-run-summary.md  16-scene-flow.md  17-powerup-synergies.md  18-time-and-grid.md  19-biomes.md  19-roster.md  20-contamination.md  BIOME_FX.md  playtest-session-kit.md  playtesting-and-launch-roadmap.md  prototype-roster.md  slingshot-freeze-backlog.md
making-of/: README.md  freeze-candidates.html  powerup-emoji-preview.html  powerup-pickup-tuner.html
src/: game.js  main.js
tests/: balance_model.mjs  gauntlet.mjs  smoke.mjs
tools/: verify.mjs  (+8 more)
(+109 files in other folders)
