[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "three_pm"
version = "0.1.0"
description = "TODO: describe three_pm"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kleer001" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
